# latios

./: .gitignore  Cargo.toml  README.md
data/: latios.json
src/: app.rs  input.rs  latios_types.rs  main.rs  markdown.rs  server.rs
src/models/: app_data.rs  description_edit_state.rs  mod.rs  project.rs  task.rs  view_state.rs  workflow_preset.rs  workstream.rs
src/storage/: export.rs  json.rs  mod.rs
src/storage/pocketbase/: client.rs  config.rs  mod.rs  models.rs  sync.rs
src/ui/: help.rs  mod.rs  preset_picker.rs  project_detail.rs  project_list.rs  task_detail.rs  task_list.rs  workstream_detail.rs
