[package]
name = "latios"
version = "0.1.0"
edition = "2024"
description = "latios is a simple todo tui application designed"
license = "MIT"

[dependencies]
# TUI Framework
ratatui = "0.30"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Clipboard
arboard = "3.4"

# Markdown rendering
pulldown-cmark = "0.12"
