[package]
name = "latios"
version = "0.1.1"
edition = "2024"
description = "latios is a simple todo tui application designed"
license = "MIT"

[dependencies]
# TUI Framework
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Clipboard
arboard = "3.4"

# Markdown rendering
pulldown-cmark = "0.12"

# Home directory resolution
dirs = "5.0"

# HTTP client for PocketBase sync
reqwest = { version = "0.11", features = ["blocking", "json"] }
ratatui = { version = "0.30.0", features = ["unstable-widget-ref"] }
cmd_lib = "2.0.0"
color-eyre = "0.6.5"
